# RIFT.ware

./: .gitignore  CMakeLists.txt  README.md  rift_env.py
cmake/modules/: rift_proto.cmake  rift_yang.cmake
modules/automation/core/harness/: driver  harness  prepare_openstack.py  scrub_tenant.py
modules/automation/core/lib/: CMakeLists.txt
modules/automation/core/lib/pytest/: conftest.py
modules/automation/core/util/: systest_wrapper.sh  test_openstack_wrapper.py
modules/automation/core/util/mano/: mano_common.sh
modules/core/enablement/vnf/descriptors/scripts/multivm_nsd/: CMakeLists.txt  generate_nsd_packages.sh.in
modules/core/enablement/vnf/descriptors/scripts/multivm_nsd/config/: tg_ts_trafgen  tg_ts_trafsink
modules/core/enablement/vnf/descriptors/scripts/multivm_nsd/rift/mano/nsds/: rw_multivm_nsd.py
modules/core/enablement/vnf/descriptors/scripts/multivm_nsd/scripts/: tgtraffic_startstop.py
modules/core/enablement/vnf/descriptors/scripts/multivm_nsd/templates/: dkpi_1a_9vm_tg_ts  dkpi_1a_tg_ts  trafgen_trafsink  trafgen_trafsink_2VM
modules/core/enablement/vnf/descriptors/scripts/multivm_vnfd/: CMakeLists.txt  generate_packages.sh.in  test.py
modules/core/enablement/vnf/descriptors/scripts/multivm_vnfd/config/: dkpi_2a_cag_cfg  dkpi_2a_cag_cfg2  dkpi_2a_cag_cfg3  dkpi_2a_cag_cfg4  dkpi_2a_pgw_cfg  dkpi_2a_pgw_cfg2  dkpi_2a_pgw_cfg3  dkpi_2a_pgw_cfg4  dkpi_2b_cag_cfg  dkpi_2b_cag_cfg2  dkpi_2b_cag_cfg3  dkpi_2b_cag_cfg4  dkpi_2b_pgw_cfg  dkpi_2b_pgw_cfg2  dkpi_2b_pgw_cfg3  dkpi_2b_pgw_cfg4
modules/core/enablement/vnf/descriptors/scripts/multivm_vnfd/rift/mano/vnfds/: rw_multivm_vnfd.py
modules/core/enablement/vnf/descriptors/scripts/multivm_vnfd/templates/: dkpi_2a_cag  dkpi_2a_pgw  dkpi_2b_cag  dkpi_2b_pgw  trafgen_1VM  trafgen_2VM  trafgen_3VM
modules/core/mano/: CMakeLists.txt
modules/core/mano/common/python/: CMakeLists.txt
modules/core/mano/confd_client/: confd_client.py
modules/core/mano/examples/ping_pong_ns/: CMakeLists.txt  config_desc.py  generate_packages.sh.in
modules/core/mano/examples/ping_pong_ns/ping_pong_ns/: prepare_ping_pong_qcow.sh
modules/core/mano/examples/ping_pong_ns/rift/mano/examples/: ping_pong_nsd.py
modules/core/mano/rwlaunchpad/ra/: CMakeLists.txt  pingpong_longevity_systest  pingpong_lp_standalone_systest  pingpong_records_systest  pingpong_recovery_systest  pingpong_vnf_reload_systest
modules/core/mano/rwlaunchpad/ra/pytest/: conftest.py  test_onboard_vnf.py  test_pingpong_longevity.py  test_pingpong_vnf.py  test_records.py  test_scaling.py
modules/core/mano/rwlaunchpad/ra/racfg/: multivm_vnf_slb_systest.racfg  multivm_vnf_trafgen_systest.racfg  pingpong_lp_standalone_systest_openstack.racfg  pingpong_lp_standalone_systest_openstack_xml.racfg  pingpong_records_systest_openstack.racfg  pingpong_records_systest_openstack_xml.racfg  pingpong_vnf_reload_systest_openstack.racfg  pingpong_vnf_reload_systest_openstack_xml.racfg  pingpong_vnf_systest_cloudsim.racfg  pingpong_vnf_systest_openstack.racfg  scaling_systest.racfg
modules/core/mano/rwlaunchpad/test/: CMakeLists.txt  launchpad.py  launchpad_recovery.py  mano_error_ut.py  mano_ut.py  utest_nsr_handler.py  utest_rwmonitor.py  utest_uploader.py
modules/core/mano/rwmc/ra/: CMakeLists.txt  mission_control_negative_systest  mission_control_reload_systest
modules/core/mano/rwmc/test/: mission_control.py
modules/core/mgmt/: CMakeLists.txt
modules/core/mgmt/rwcli/plugins/: rw.cli.xml
modules/core/mgmt/rwcli/rift/: pprint.py
modules/core/mgmt/rwcli/scripts/: rwcli
modules/core/mgmt/rwcli/src/: rwcli.cpp  rwcli.hpp  rwcli_schema.cpp  rwcli_schema.hpp
modules/core/mgmt/rwcli/test/: rwcli_schema_test.cpp  rwcli_test.cpp
modules/core/mgmt/rwdebug-scripts/: rwsysdump
modules/core/mgmt/rwnetconf/src/: rwnc_xml.cpp
modules/core/mgmt/rwrestconf/: CMakeLists.txt
modules/core/mgmt/rwrestconf/plugins/: CMakeLists.txt  ietf-restconf-monitoring.cli.xml  ietf-restconf-monitoring.tailf.yang  rw-restconf.tailf.yang  rw-restconf.yang
modules/core/mgmt/rwrestconf/test/: test_rest.py  test_rest_put.py  test_restconf_notification.py  test_tasklet.py  vehicle-a.yang
modules/core/mgmt/rwuagent/: CMakeLists.txt
modules/core/mgmt/rwuagent/confd/: CMakeLists.txt  rw_confd_prototype.conf
modules/core/mgmt/rwuagent/src/: rwuagent.hpp  rwuagent_all.cpp  rwuagent_confd.hpp  rwuagent_confd_connect.cpp  rwuagent_confd_daemon.cpp  rwuagent_confd_dom_stats.cpp  rwuagent_confd_log.cpp  rwuagent_confd_mgmt_system.cpp  rwuagent_confd_mgmt_system.hpp  rwuagent_confd_upgrade.cpp  rwuagent_confd_workspace.cpp  rwuagent_dts.cpp  rwuagent_dynamic_schema.cpp  rwuagent_instance.cpp  (+19 more)
modules/core/mgmt/rwwatchdog/: CMakeLists.txt
modules/core/mgmt/rwwatchdog/rift/watchdog/: __init__.py  connection_details.py  watchdog.py  watchdog_connector.py  watchdog_handler.py
modules/core/mgmt/rwwatchdog/test/: rwwatchdog_client_tester
modules/core/rwvx/rwdts/: CMakeLists.txt
modules/core/rwvx/rwdynschema/: CMakeLists.txt
modules/core/rwvx/rwmsg/: CMakeLists.txt
modules/core/rwvx/rwschema/: rwbase_schema_listing.txt
modules/ext/util/: CMakeLists.txt  foss.txt
modules/ext/util/coredumper/: CMakeLists.txt
modules/ui/composer/webapp/: package.json
modules/ui/rw.ui/: CMakeLists.txt
modules/ui/rw.ui/api/: package.json  routes.js  sockets.js
modules/ui/rw.ui/skyquake/: package.json  skyquake.js
modules/ui/rw.ui/webapp/: package.json  server.js  webpack.config.js
rwbase/python/rift/gi/: pbcm_override.py
scripts/cloud/: enable_lab  reset_vm
scripts/env/: rift.sh
scripts/packaging/: build-rpm  copyright-helper.py  create-branch-repo  rift.repo  update-riftware-repo.sh
scripts/packaging/rpmbuild/FILELISTS/: riftware-base-ui.txt  riftware-scripts-host.txt  riftware-scripts-vm.txt
scripts/packaging/rpmbuild/SPECS/: riftware-base-ui.spec  riftware-base.spec  riftware-launchpad.spec
scripts/packaging/services/riftware-launchpad/: riftware-reset-data.sh
scripts/vm_image/: build.pip3  mkvmimg  ui-lab.config.sh  ui.config.sh  ui.kilo  ui.pip3  ui.rpms
(+591 files in other folders)
